--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile project(':library')
     compile files('libs/commons-views-1.0.0.jar')
+    compile files('libs/android-async-http-1.4.6.jar')
+    compile files('libs/android-async-http-1.4.8.jar')
+    compile files('libs/httpclient-4.2.5.jar')
+    compile files('libs/commons-codec-1.6.jar')
+    compile files('libs/fastjson-1.2.2.jar')
 }
